# validate-smtp-with-py

./: .env-example  .gitignore  README.md  pyproject.toml  stmp.txt  validar_smtp.py
